--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "git://github.com/wavefarm/upload.git",
   "dependencies": {
     "moment": "^2.10.6",
-    "mustache": "^2.2.0"
+    "mustache": "^2.2.0",
+    "nodemailer": "^1.10.0"
   }
 }
